Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
- The resource booking functionality is fixed and re-enabled.
Bug fixes:
~~~~~~~~~~
-
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
-