@@ -3,7 +3,9 @@ Requires:
 -
 New features:
 ~~~~~~~~~~~~~
-- The resource booking functionality is fixed and re-enabled.
+- The resource booking functionality is fixed and re-enabled. (#249)
+- Events can no longer be edited if they are in the past, except by the
+  calendar owner. (#1467)
 Bug fixes:
 ~~~~~~~~~~
 -
